--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Breve biografia
 Áreas de atuação e interesses profissionais 
 Uso de foto pessoal é opciona-->
                 <p>
-                Meu nome é Cristian e sou Desenvolvedor de Jogos. Sou formado pelo Senac em T.I e atuo na área de desenvolvimento de jogos pela empresa Riot Games. Meus interesses profissionais é poder evoluir profissionalmente e poder criar um jogo com minhas ideias de forma idependente. 
+                Meu nome é Cristian, sou Desenvolvedor de Jogos e formado em Tecnologia da Informação pelo Senac. Desde cedo sempre fui apaixonado por games, e transformar essa paixão em carreira foi um dos maiores objetivos da minha vida. Atualmente, atuo como desenvolvedor na Riot Games, onde tive a oportunidade de contribuir em diversos projetos que me desafiaram e ampliaram minha visão sobre o mercado de games. 
                 </p>
             <div>
                 <div class="social-icons">
@@ -58,13 +58,21 @@ Uso de foto pessoal é opciona-->
             </div>
         </section>
         <section id="servicos" class="blocos">
+                    <div class="servicos-img">
+                <img src="./img/kassadin.png" alt="Imagem do Kassadin by Riot Games">
             <h3>Serviços</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati optio minima, sunt nulla est harum officiis. Placeat repellat, odit qui, praesentium ullam, quaerat fuga nulla id aut voluptatibus expedita commodi?</p>
+            <p>Dentro da Riot, participei do desenvolvimento de sistemas e funcionalidades voltadas para a experiência do jogador, trabalhando em equipe com profissionais incríveis que compartilham a mesma paixão por criar universos envolventes e mecânicas inovadoras. Cada projeto me ensinou algo novo, desde processos de game design até práticas de programação de alto nível e otimização de performance.</p>
 
         </section>
         <section id="Habilidades" class="blocos">
             <h3>Habilidades</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid suscipit reprehenderit ullam corporis ducimus? Nam quae fuga vero beatae, quis explicabo, ipsum fugiat quidem illo quam voluptatem magni modi officiis.</p>
+            <p>Ao longo da minha formação e experiência na área de Tecnologia da Informação e desenvolvimento de jogos, adquiri uma base sólida de habilidades técnicas e criativas. Tenho conhecimento em lógica de programação, estrutura de dados e algoritmos, fundamentais para o desenvolvimento de sistemas robustos e performáticos. Trabalho com linguagens como C#, C++ e Python, além de ter experiência com motores gráficos como Unity e Unreal Engine, onde desenvolvi protótipos, mecânicas de gameplay e interações em tempo real.
+
+Na parte de T.I, também possuo habilidades em banco de dados (SQL e NoSQL), redes de computadores, versionamento de código com Git, e conhecimentos básicos em segurança da informação e infraestrutura, que são essenciais para manter ambientes de desenvolvimento estáveis e seguros.
+
+No campo do desenvolvimento de jogos, atuo com foco tanto na parte técnica quanto na experiência do usuário. Tenho noções de game design, design de interface (UI/UX) e narrativa interativa, além de entender o processo de balanceamento de mecânicas, testes de jogabilidade e otimização para diferentes plataformas. Também estou familiarizado com metodologias ágeis, como Scrum e Kanban, que auxiliam na organização de projetos em equipe e no cumprimento de prazos.
+
+Sou uma pessoa que busca constantemente aprender novas tecnologias, ferramentas e tendências do mercado de jogos e tecnologia, sempre com o objetivo de criar experiências inovadoras e envolventes. Acredito que a combinação entre técnica, criatividade e trabalho em equipe é o que realmente transforma uma ideia em um grande jogo.</p>
         </section>
         <section id="Formacao" class="blocos">
             <h3>Formação</h3>
