add nova foto e mais linhas de codigo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
+    <title>Portifólio do Futuro</title>
     <meta name="description" content="Esse é o site de portifólio do Futuro de ManoCris">
     <meta name="keywords" content="ManoCris, Cid Kanegou, Osu!, League of Legends, Youtube, css, html, Kassadin, Roxy Migurdia">
     <meta name="author" content="Cristian">
@@ -22,9 +22,9 @@
         </label>
         <nav>
             <a href="index.html" class="active">Home</a>
+            <a href="#formacao" >Formação</a>
+            <a href="#habilidades" >Habilidades</a>
             <a href="#servicos" >Serviços</a>
-            <a href="#Habilidades" >Habilidades</a>
-            <a href="#Formacao" >Formação</a>
             <a href="#Experiencia" >Experiência</a>
             <a href="#Contatos" >Contatos</a>
         </nav>
@@ -36,10 +36,6 @@
             <div class="home-content">
                 <h1>Prazer! O meu nome é <span>Cristian</span></h1>
                 <h3 class="typing-text">Eu sou <span></span></h3>
-<!--Nome e profissão desejada 
-Breve biografia 
-Áreas de atuação e interesses profissionais 
-Uso de foto pessoal é opciona-->
                 <p>
                 Meu nome é Cristian, sou Desenvolvedor de Jogos e formado em Tecnologia da Informação pelo Senac. Desde cedo sempre fui apaixonado por games, e transformar essa paixão em carreira foi um dos maiores objetivos da minha vida. Atualmente, atuo como desenvolvedor na Riot Games, onde tive a oportunidade de contribuir em diversos projetos que me desafiaram e ampliaram minha visão sobre o mercado de games. 
                 </p>
@@ -47,7 +43,6 @@ Uso de foto pessoal é opciona-->
                 <div class="social-icons">
                     <a href="https://br.linkedin.com/in/cristian-tinoco-de-castro-218a25296"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/ManoCris01"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-brands fa-discord"></i></a>
                     <a href="https://x.com/Meranik01"><i class="fa-brands fa-twitter"></i></a>
                     <a href="https://www.instagram.com/manocris_insta/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.youtube.com/c/MynameisCris"><i class="fa-brands fa-youtube"></i></a>
@@ -57,27 +52,37 @@ Uso de foto pessoal é opciona-->
                 <a href="Teste.html" class="btn">Me Contrate</a>
             </div>
         </section>
+
+        <section id="formacao" class="blocos">
+            <div class="formacao-texto">
+            <h3>Formação</h3>
+            <p>Sou formado no Ensino Médio com Técnico integrado em T.I pelo Senac e pretendo cursar Desenvolvimento de Jogos ou Ciência da Computação. Também planejo realizar especializações e certificações em áreas como desenvolvimento de software, game design e segurança da informação, mantendo-me sempre atualizado nas tendências do mercado de tecnologia.</p>
+            </div>
+            <div class="formacao-img">
+            <img src="./img/estudo.png" alt="Imagem representando estudos.">
+            </div>
+        </section>
+
+        <section id="habilidades" class="blocos">
+            <div class="habilidades-texto">
+            <h3>Habilidades</h3>
+            <p>Tenho experiência em linguagens de programação como C#, C++ e Python, além de trabalhar com motores gráficos Unity e Unreal Engine, desenvolvendo protótipos, mecânicas de gameplay e interações em tempo real. Possuo conhecimentos em lógica de programação, estruturas de dados, algoritmos, banco de dados (SQL/NoSQL), redes, versionamento com Git e noções de segurança da informação. No desenvolvimento de jogos, atuo tanto na parte técnica quanto na experiência do usuário, com noções de game design, UI/UX e narrativa interativa, além de práticas de balanceamento, testes de jogabilidade e otimização para diferentes plataformas. Estou sempre buscando aprender novas tecnologias e tendências para criar soluções inovadoras e envolventes.</p>
+            </div>
+            <div class="habilidades-img">
+            <img src="./img/hutao.png" alt="Imagem da Hu Tao por Hoyolab">
+            </div>
+        </section>
+
         <section id="servicos" class="blocos">
-                    <div class="servicos-img">
-                <img src="./img/kassadin.png" alt="Imagem do Kassadin by Riot Games">
+            <div class="servicos-texto">
             <h3>Serviços</h3>
             <p>Dentro da Riot, participei do desenvolvimento de sistemas e funcionalidades voltadas para a experiência do jogador, trabalhando em equipe com profissionais incríveis que compartilham a mesma paixão por criar universos envolventes e mecânicas inovadoras. Cada projeto me ensinou algo novo, desde processos de game design até práticas de programação de alto nível e otimização de performance.</p>
-
+            </div>
+            <div class="servicos-img">
+            <img src="./img/kassadin.png" alt="Imagem do Kassadin by Riot Games">
+            </div>
         </section>
-        <section id="Habilidades" class="blocos">
-            <h3>Habilidades</h3>
-            <p>Ao longo da minha formação e experiência na área de Tecnologia da Informação e desenvolvimento de jogos, adquiri uma base sólida de habilidades técnicas e criativas. Tenho conhecimento em lógica de programação, estrutura de dados e algoritmos, fundamentais para o desenvolvimento de sistemas robustos e performáticos. Trabalho com linguagens como C#, C++ e Python, além de ter experiência com motores gráficos como Unity e Unreal Engine, onde desenvolvi protótipos, mecânicas de gameplay e interações em tempo real.
 
-Na parte de T.I, também possuo habilidades em banco de dados (SQL e NoSQL), redes de computadores, versionamento de código com Git, e conhecimentos básicos em segurança da informação e infraestrutura, que são essenciais para manter ambientes de desenvolvimento estáveis e seguros.
-
-No campo do desenvolvimento de jogos, atuo com foco tanto na parte técnica quanto na experiência do usuário. Tenho noções de game design, design de interface (UI/UX) e narrativa interativa, além de entender o processo de balanceamento de mecânicas, testes de jogabilidade e otimização para diferentes plataformas. Também estou familiarizado com metodologias ágeis, como Scrum e Kanban, que auxiliam na organização de projetos em equipe e no cumprimento de prazos.
-
-Sou uma pessoa que busca constantemente aprender novas tecnologias, ferramentas e tendências do mercado de jogos e tecnologia, sempre com o objetivo de criar experiências inovadoras e envolventes. Acredito que a combinação entre técnica, criatividade e trabalho em equipe é o que realmente transforma uma ideia em um grande jogo.</p>
-        </section>
-        <section id="Formacao" class="blocos">
-            <h3>Formação</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit enim vero consectetur! Porro at mollitia est quibusdam autem pariatur dicta soluta, eos expedita ut iure blanditiis, sunt, laboriosam magnam in.</p>
-        </section>
         <section id="Experiencia" class="blocos">
             <h3>Experiencia</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, incidunt sequi? Blanditiis, debitis nemo minus culpa nihil consectetur, excepturi, assumenda quidem pariatur eum similique commodi odio officiis provident sint fugit.</p>
@@ -87,5 +92,19 @@ Sou uma pessoa que busca constantemente aprender novas tecnologias, ferramentas 
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, sint perferendis eaque dicta eveniet, minima exercitationem excepturi dolor repellat natus cumque hic. Ea culpa voluptas fugit eum facilis harum quis?</p>
 
         </section>
+        <!-- Checkbox invisível que controla o pop-up -->
+<input type="checkbox" id="discordToggle" style="display:none;">
+
+<!-- Ícone do Discord -->
+<label for="discordToggle" style="cursor:pointer;">
+    <i class="fa-brands fa-discord"></i>
+</label>
+
+<!-- Pop-up -->
+<div id="discordPopup">
+  <p>Adicione-me no Discord:</p>
+  <p><strong>Cristian#1234</strong></p>
+  <label for="discordToggle" class="fecharBtn">Fechar</label>
+</div>
 </body>
 </html>
