--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a href="https://www.twitch.tv/manocristv"><i class="fa-brands fa-twitch"></i></a>
                 </div>
                 
-                <a href="Teste.html" class="btn">Me Contrate</a>
+                <a href="mailto:cristiantinoco337@gmail.com?subject=Estou%20querendo%20te%20contratar!&body=...." class="btn">Me Contrate</a>
             </div>
         </section>
 
@@ -69,27 +69,47 @@
             <p>Tenho experiência em linguagens de programação como C#, C++ e Python, além de trabalhar com motores gráficos Unity e Unreal Engine, desenvolvendo protótipos, mecânicas de gameplay e interações em tempo real. Possuo conhecimentos em lógica de programação, estruturas de dados, algoritmos, banco de dados (SQL/NoSQL), redes, versionamento com Git e noções de segurança da informação. No desenvolvimento de jogos, atuo tanto na parte técnica quanto na experiência do usuário, com noções de game design, UI/UX e narrativa interativa, além de práticas de balanceamento, testes de jogabilidade e otimização para diferentes plataformas. Estou sempre buscando aprender novas tecnologias e tendências para criar soluções inovadoras e envolventes.</p>
             </div>
             <div class="habilidades-img">
-            <img src="./img/hutao.png" alt="Imagem da Hu Tao por Hoyolab">
+            <img src="./img/hutao.png" alt="Imagem da Hu Tao por Hoyolab.">
             </div>
         </section>
 
         <section id="servicos" class="blocos">
             <div class="servicos-texto">
             <h3>Serviços</h3>
-            <p>Dentro da Riot, participei do desenvolvimento de sistemas e funcionalidades voltadas para a experiência do jogador, trabalhando em equipe com profissionais incríveis que compartilham a mesma paixão por criar universos envolventes e mecânicas inovadoras. Cada projeto me ensinou algo novo, desde processos de game design até práticas de programação de alto nível e otimização de performance.</p>
+            <p>Dentro da Riot Games, participei do desenvolvimento de sistemas e funcionalidades voltadas para aprimorar a experiência do jogador, atuando em equipe com profissionais multidisciplinares apaixonados por criar universos imersivos e mecânicas inovadoras. Um dos projetos mais marcantes foi o Nexus Protocol, uma iniciativa experimental que buscava integrar diferentes títulos da Riot por meio de um sistema de progressão compartilhada e narrativa interconectada entre plataformas. Nesse projeto, trabalhei diretamente na prototipação de mecânicas cross-game e na implementação de funcionalidades voltadas para a retenção e engajamento dos jogadores. Além disso, colaborei no desenvolvimento do Riot Intern Tools v2, um conjunto de ferramentas internas voltado à automação de testes de gameplay e análise de dados de telemetria. Esse trabalho teve impacto direto na eficiência do time de QA e contribuiu para decisões estratégicas em balanceamento de jogo e performance. Fora da Riot, também criei alguns projetos pessoais tais como site de trabalho e educacional.</p>
+            <a href="https://github.com/ManoCris01?tab=repositories" class="btn2">Repositorios</a>
             </div>
             <div class="servicos-img">
-            <img src="./img/kassadin.png" alt="Imagem do Kassadin by Riot Games">
+            <img src="./img/kassadin.png" alt="Imagem do Kassadin by Riot Games.">
             </div>
         </section>
 
         <section id="Experiencia" class="blocos">
+            <div class="experiencia-texto">
             <h3>Experiencia</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, incidunt sequi? Blanditiis, debitis nemo minus culpa nihil consectetur, excepturi, assumenda quidem pariatur eum similique commodi odio officiis provident sint fugit.</p>
+            <p>Minha trajetória profissional foi construída com base na paixão por tecnologia e jogos. Antes de chegar à Riot Games, atuei em estúdios independentes e startups de tecnologia, onde participei desde o desenvolvimento de pequenos protótipos até jogos completos para PC e mobile. Essas experiências me deram uma base sólida em trabalho colaborativo, resolução de problemas técnicos e criatividade sob pressão. Na Riot, tive a oportunidade de trabalhar com equipes multidisciplinares em títulos de grande alcance, contribuindo para features que impactam milhões de jogadores globalmente. Meu foco principal tem sido em sistemas de gameplay, inteligência artificial e integração de serviços online, sempre com atenção à performance e à experiência do usuário. Cada projeto me impulsionou a crescer como desenvolvedor e como profissional, expandindo minha visão sobre o impacto que os jogos podem ter nas pessoas.</p>
+            </div>
+            <div class="experiencia-img">
+            <img src="./img/riot games.jpg" alt="Imagem do estudio da Riot Games.">
+            </div>
         </section>
         <section id="Contatos" class="blocos">
+            <div class="contatos-texto">
             <h3>Contatos</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, sint perferendis eaque dicta eveniet, minima exercitationem excepturi dolor repellat natus cumque hic. Ea culpa voluptas fugit eum facilis harum quis?</p>
+            <p>Estou sempre aberto a colaborações, trocas de conhecimento e novas oportunidades no universo dos games e da tecnologia.</p>
+            <p>Você pode me encontrar nas seguintes plataformas:</p>
+
+                <div class="social-icons">
+                    <a href="https://br.linkedin.com/in/cristian-tinoco-de-castro-218a25296"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/ManoCris01"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://x.com/Meranik01"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/manocris_insta/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/c/MynameisCris"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.twitch.tv/manocristv"><i class="fa-brands fa-twitch"></i></a>
+                </div>
+            <div class="contatos-img">
+                <img src="./img/rudeus.png" alt="Imagem do Rudeus de Mushoku Tensei">
+            </div>
 
         </section>
 </body>
